Change test according to article